<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/common_bg">
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:layout_gravity="top"
      android:background="@drawable/horizontal_line"
  ></LinearLayout> 
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="40dp"
    android:background="@drawable/smokey_bg"
    android:gravity="left">
   <TextView 
       android:layout_width="wrap_content"
       android:layout_height="fill_parent"
       android:text="@string/secure_login"
       android:textSize="16dp"
       android:gravity="center_vertical"
       android:textColor="@android:color/primary_text_light"
       android:textStyle="bold"
       android:paddingLeft="15dp"
   />
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:gravity="right">
       <Button
       android:id="@+id/signin_login_user"
       android:layout_width="wrap_content"
       android:minWidth="@dimen/header_button_submit"
       android:layout_height="fill_parent"
       android:layout_marginBottom="2dp"
       android:layout_marginTop="2dp"
       android:gravity="center"
       android:layout_gravity="center_vertical"
       android:text="@string/login" 
       android:textColor="@drawable/button_fore_color" />
   </LinearLayout>   
 </LinearLayout> 
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:layout_gravity="top"
      android:background="@drawable/horizontal_line"
  ></LinearLayout> 
     
    
    <EditText
        android:id="@+id/signin_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_user_email"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:layout_marginTop="@dimen/bottom_margin_form"        
        android:layout_marginBottom="@dimen/bottom_margin_form"
    />     
    <EditText
        android:id="@+id/signin_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/register_user_password"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:layout_marginBottom="@dimen/bottom_margin_form"
    />      

 
</LinearLayout>
<LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:gravity="bottom">

    <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:layout_gravity="bottom"
      android:background="@drawable/horizontal_line">
   </LinearLayout>           
 <LinearLayout
    android:layout_gravity="bottom"
    android:layout_width="fill_parent"
    android:layout_height="40dp"
    android:background="@drawable/smokey_bg"
    android:gravity="center"
    android:orientation="horizontal">
    <Button
       android:id="@+id/signin_register_user"
       android:layout_width="0dp"
       android:layout_weight=".5"
       android:minWidth="@dimen/header_button_submit"
       android:layout_height="fill_parent"
       android:layout_marginBottom="2dp"
       android:layout_marginTop="2dp"
       android:gravity="center"
       android:layout_gravity="center_vertical"
       android:text="@string/register" 
       android:textColor="@drawable/button_fore_color" />  
       
    <Button
       android:id="@+id/signin_forgot_password"
       android:layout_width="0dp"
       android:layout_weight=".5"
       android:minWidth="@dimen/header_button_submit"
       android:layout_height="fill_parent"
       android:layout_marginBottom="2dp"
       android:layout_marginTop="2dp"
       android:gravity="center"
       android:layout_gravity="center_vertical"
       android:text="@string/forgot_password"  
       android:textColor="@drawable/button_fore_color" /> 

</LinearLayout>   
   <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:layout_gravity="bottom"
      android:background="@drawable/horizontal_line"
    ></LinearLayout>      
    
    
 <LinearLayout
     android:layout_gravity="bottom"
     android:gravity="bottom"  
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">    
     <include layout="@layout/common_footer" />
  </LinearLayout></LinearLayout>
</FrameLayout>