<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/setting_group" 
    android:background="@drawable/common_bg">

    <CheckBox
        android:id="@+id/settings_notification"
        android:checked="false"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"        
        android:layout_width="fill_parent"
        android:textColor="@android:color/primary_text_light"        
        android:layout_height="wrap_content"
        android:text="@string/setting_notification">
        
    </CheckBox>
    
    <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:layout_gravity="bottom"
      android:layout_marginTop="@dimen/form_margin_5dp"
      android:layout_marginBottom="@dimen/form_margin_5dp"
      android:background="@drawable/horizontal_line" />
    <CheckBox
        android:id="@+id/settings_facebook"
        android:checked="false"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"        
        android:layout_width="fill_parent"
        android:textColor="@android:color/primary_text_light"        
        android:layout_height="wrap_content"
        android:text="@string/setting_facebook">
        
    </CheckBox>    
    <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:layout_gravity="bottom"
      android:layout_marginTop="@dimen/form_margin_5dp"
      android:layout_marginBottom="@dimen/form_margin_5dp"
      android:background="@drawable/horizontal_line" />
    <CheckBox
        android:id="@+id/settings_promotion"
        android:checked="false"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"        
        android:layout_width="fill_parent"
        android:textColor="@android:color/primary_text_light"        
        android:layout_height="wrap_content"
        android:text="@string/setting_promotion">
        
    </CheckBox> 
    <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:layout_gravity="bottom"
      android:layout_marginTop="@dimen/form_margin_5dp"
      android:layout_marginBottom="@dimen/form_margin_5dp"
      android:background="@drawable/horizontal_line" />    
    <TextView 
       android:layout_height="wrap_content"        
       android:layout_width="fill_parent"    
       android:textColor="@android:color/primary_text_light"           
       android:layout_marginLeft="@dimen/left_margin"
       android:layout_marginRight="@dimen/right_margin"         
       android:text="@string/setting_app_detail"/>
    <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:layout_gravity="bottom"
      android:layout_marginTop="@dimen/form_margin_5dp"
      android:layout_marginBottom="@dimen/form_margin_5dp"
      android:background="@drawable/horizontal_line" />     
    <TextView 
       android:layout_height="wrap_content"        
       android:layout_width="fill_parent"  
       android:gravity="center"  
       android:textColor="@android:color/primary_text_light"           
       android:layout_marginLeft="@dimen/left_margin"
       android:layout_marginRight="@dimen/right_margin"         
       android:text="@string/setting_go_back"/>
    <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:layout_gravity="bottom"
      android:layout_marginTop="@dimen/form_margin_5dp"
      android:layout_marginBottom="@dimen/form_margin_5dp"
      android:background="@drawable/horizontal_line" />     
    
</LinearLayout>